--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
-            <!--
-                 TODO: Mostrar datos del objeto collection. Ver archivo ./js/script.js
-               - Cargar la librería de VueJS y el script ./js/script.js al final de la etiqueta <body>
-               - Cargar el CSS de Bootstrap (no es necesario el JS)
-               - Mostrar el título de la colección dentro de un componente Jumbotron de Bootstrap https://getbootstrap.com/docs/4.0/components/jumbotron/. En su interior habrá un <h1> con id "title" que mostrará el título de la colección
-               - Para cada item: (https://vuejs.org/v2/guide/index.html#Conditionals-and-Loops)
-                 - Crear un componente card de Bootstrap (https://getbootstrap.com/docs/4.0/components/card/)
-                 - Mostrar un enlace de tipo botón a la propiedad "href" del item con el texto "Ver"
-                 - Mostrar cada uno de los elementos del vector "data" en una lista de definición <dl>. Para cada elemento del vector "data":
-                   - El término <dt> será la propiedad "prompt"
-                   - La definición <dd> será la propiedad "value"
-            -->
+            <input type="text" v-model="items">
 
         </div>
 
